<resources>

    <string name="app_name">江塚式じゃんけん</string>
    <string name="title_activity_main">江塚式じゃんけん</string>
    <string name="ready">勝負</string>
    <string name="draw">引き分け</string>
    <string name="win">勝ち</string>
        <string name="lose">負け</string>
        <string name="enemyHand">相手の手</string>
        <string name="pah">パー</string>
        <string name="choki">チョキ</string>
        <string name="guh">グー</string>
    

</resources>